--- a/components/backend-tests-dotnet-basic-tgqvteci/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-tgqvteci/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-tgqvteci
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-tgqvteci:34452cd1a6a1363b257aaf79f5f597bec11ab1aa@sha256:37541ef557349da50669eb5b3c006e885bc57cc31e5d958280156787c2ab02e5
+          name: container-image
